--- a/index.html
+++ b/index.html
@@ -82,12 +82,8 @@
         <div class="container">
             <div class="col-lg-12 bajada">
                 <h1 class="txt-white">Hi-rise living<br>at it's best!</h1>
-            </div>    
-            <div class="col-lg-12 bajada">
                 <p class="txt-white">The best offer in Towson, MD</p>
-            </div>    
-            <div class="col-lg-12 text-right">
-                <a href="#" class="btn-primary">DISCOVER NOW</a>
+                <a href="#" class="btn-primary text-right">DISCOVER NOW</a>
             </div>
         </div>
     </section>    
@@ -137,7 +133,7 @@
         </div>        
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-5">
                     <h3 class="txt-blue">Apartments</h3>
                     <p class="txt-black">Our large, newly remodeled* luxury apartments will make you feel right at home with balconies and breathtaking views.Our pool and tennis court will keep you moving, while enjoying the comfort, quiet, and security of hi-rise apartment living.</p>
                     <a href="#" class="btn-primary">DISCOVER NOW</a>
