--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
     <!-- HEADER -->
     <div class="nav-white">
         <a href="index.html"><img src="img/logo.svg" class="logo" alt="Ruxton Towers"></a>
-    </div>    
-    <header role="banner">        
+        <p class="info">Towson, MD  |  410-828-6700  |  <a href="mailto:info@webhomes.com _blank">leasing@ruxtontowers.com</a></p>
+    </div> 
+    <header role="banner">
     <button type="button" class="drawer-toggle drawer-hamburger">
       <span class="sr-only">toggle navigation</span>
       <span class="drawer-hamburger-icon"></span>
